add profile pic on header

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -20,6 +20,7 @@
 
 .about__me-image {
   border-radius: 2rem;
+  aspect-ratio: 1/1;
   overflow: hidden;
   transform: rotate(10deg);
   transition: var(--transition);
