--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -118,15 +118,15 @@ h5 {
   background: linear-gradient(var(--color-primary));
   width: 2rem;
   height: 2rem;
-  /* position: absolute;
-  left: calc(50% - 11rem); */
+  position: absolute;
+  left: calc(50% - 11rem);
   margin-top: 4rem;
   border-radius: 12rem 12rem 0 0;
   overflow: hidden;
   padding: 3rem 1.5rem 1.5rem 1.5rem;
-  /* display: flex;
+  display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
 }
 
 .me img {
